<resources>
    <string name="app_name">乐老汇</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登 入</string>
    <string name="action_sign_in_short">登入</string>
    <string name="error_invalid_email">用户名错误</string>
    <string name="error_invalid_password">密码错误，请正确输入密码</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="count_money">总金额</string>
    <string name="delete_all">全部删除</string>
    <string name="shopping_select_txt">请为老人选择餐品</string>
    <string name="shopping_order_txt">总价：</string>
    <string name="add_address">新增收获地址</string>
    <string name="edit_address">编辑地址</string>
    <string name="delete_address">删除地址</string>
    <string name="address_content">收件人详细地址：</string>
    <string name="p_address_name">收件人：</string>
    <string name="phone_num">手机号：</string>
    <string name="server_rule">服务规则：</string>
    <string name="server_person_time">服务时间：</string>
    <string name="server_person">服务员：</string>
    <string name="address_content_txt">地址：</string>
    <string name="postnum">邮编：</string>
    <string name="operate_address">编辑</string>
    <string name="server_time">上门服务日期：</string>
    <string name="option_time">选择日期</string>
    <string name="option_special">服务特殊要求：</string>
    <string name="input_special">请输入文字</string>
    <string name="shopping_select_ok">选好了</string>
    <string name="upload_shopping">提交订单</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_le_laohui_main">LeLaohuiMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_foot_list">FootContent</string>
    <string name="title_foot_detail">Foot Detail</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_test_main">TestMainActivity</string>
    <string name="title_activity_footer">FooterActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
