<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <android.support.v7.widget.AppCompatTextView
       style="@style/AddressChildTextStyle"
        android:text="@string/address_content"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/name"
        style="@style/AddressChildTextStyle"
        android:text="@string/address_content_txt"

        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/phone_num"
        style="@style/AddressChildTextStyle"
        android:text="@string/phone_num"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/address"
        style="@style/AddressChildTextStyle"
        android:text="@string/address_content_txt"
        />
</LinearLayout>
